// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emptySpace > should work with border 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1tgwfex0 styles_bordered_true__1tgwfex1 styles_size_large__1tgwfex2 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
    >
      <div
        class="styles__1tgwfex5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1.5rem_xxsmall__mxir9341 styles_justifyContent_center_xxsmall__mxir9361"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
        >
          <div
            class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <p
              class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              style="--textAlign__1eu8od80: center;"
            >
              test
            </p>
          </div>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1tgwfex0 styles_size_large__1tgwfex2 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
    >
      <div
        class="styles__1tgwfex5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1.5rem_xxsmall__mxir9341 styles_justifyContent_center_xxsmall__mxir9361"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
        >
          <img
            alt=""
            class="styles_large__1tgwfex6"
            height="auto"
            src="/src/components/data-display/EmptyState/__stories__/illustrations/kapsule.webp"
            width="auto"
          />
          <div
            class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <p
              class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              style="--textAlign__1eu8od80: center;"
            >
              test
            </p>
          </div>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with image as component 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1tgwfex0 styles_size_large__1tgwfex2 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
    >
      <div
        class="styles__1tgwfex5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1.5rem_xxsmall__mxir9341 styles_justifyContent_center_xxsmall__mxir9361"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
        >
          <img
            alt="kapsule logo"
            src="/src/components/data-display/EmptyState/__stories__/illustrations/kapsule.webp"
          />
          <div
            class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <p
              class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              style="--textAlign__1eu8od80: center;"
            >
              test
            </p>
          </div>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with learn more 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1tgwfex0 styles_size_large__1tgwfex2 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
    >
      <div
        class="styles__1tgwfex5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1.5rem_xxsmall__mxir9341 styles_justifyContent_center_xxsmall__mxir9361"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
        >
          <div
            class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <p
              class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              style="--textAlign__1eu8od80: center;"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
        >
          <a
            class="styles__o0z6wk0 styles_prominence_default__o0z6wk3 styles_sentiment_info__o0z6wk2 styles_oneLine_false__o0z6wk8 styles_variant_bodyStrong__o0z6wkb styles_type_standalone__o0z6wkd styles_undefined_compound_4__o0z6wki styles__o0z6wkn"
            data-variant="standalone"
            href="https://scaleway.com"
          >
            Learn more
            <svg
              class="styles__o0z6wkp uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                ArrowRightIcon
              </title>
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </a>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with primary button 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1tgwfex0 styles_size_large__1tgwfex2 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
    >
      <div
        class="styles__1tgwfex5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1.5rem_xxsmall__mxir9341 styles_justifyContent_center_xxsmall__mxir9361"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
        >
          <div
            class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <p
              class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              style="--textAlign__1eu8od80: center;"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
        >
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v"
          >
            <button
              type="button"
            >
              Test
            </button>
          </div>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with secondary button 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1tgwfex0 styles_size_large__1tgwfex2 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
    >
      <div
        class="styles__1tgwfex5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1.5rem_xxsmall__mxir9341 styles_justifyContent_center_xxsmall__mxir9361"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
        >
          <div
            class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <p
              class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              style="--textAlign__1eu8od80: center;"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
        >
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v"
          >
            <button
              type="button"
            >
              Test
            </button>
          </div>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with size 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1tgwfex0 styles_size_small__1tgwfex4 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
    >
      <div
        class="styles__1tgwfex5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
        >
          <div
            class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <p
              class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              style="--textAlign__1eu8od80: center;"
            >
              test
            </p>
          </div>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with title 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1tgwfex0 styles_size_large__1tgwfex2 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
    >
      <div
        class="styles__1tgwfex5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1.5rem_xxsmall__mxir9341 styles_justifyContent_center_xxsmall__mxir9361"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
        >
          <div
            class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <h2
              class="style__1yhcak80 style_prominence_strong__1yhcak85 style_sentiment_neutral__1yhcak8b style_variant_headingSmall__1yhcak815 style_undefined_compound_1__1yhcak81b style_undefined_compound_65__1yhcak833"
              style="--textAlign__1eu8od80: center;"
            >
              test
            </h2>
            <p
              class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              style="--textAlign__1eu8od80: center;"
            >
              test
            </p>
          </div>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work without parameters 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1tgwfex0 styles_size_large__1tgwfex2 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
    >
      <div
        class="styles__1tgwfex5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1.5rem_xxsmall__mxir9341 styles_justifyContent_center_xxsmall__mxir9361"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
        >
          <div
            class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <p
              class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              style="--textAlign__1eu8od80: center;"
            >
              test
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
